[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygrenton"
version = "0.0.4"
authors = [
  { name="Paweł Rogaliński", email="progalin55@gmial.com" },
]
description = "Lightweight Python library to interact with grenton smart-home system."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
dependencies = [
    'cryptography'
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
